--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,4 +1,39 @@
 :root {
-    font-family: Arial, Helvetica, sans-serif;
-    text-transform: capitalize;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+*,
+*::after,
+*::before {
+	margin: 0;
+	padding: 0;
+}
+
+/* default styles */
+h1,
+h2,
+h3,
+h4 {
+	text-transform: uppercase;
+	font-weight: bold;
+}
+h1 {
+	text-align: center;
+}
+
+img {
+	max-width: 100%;
+}
+
+p,
+a,
+li,
+span,
+div {
+	text-transform: capitalize;
+}
+
+/* _____mobile */
+h1 {
+	font-size: 2rem;
 }
