--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -9,6 +9,10 @@
 	padding: 0;
 }
 
+body {
+	background-color: #f4f3ef;
+}
+
 /* default styles */
 h1,
 h2,
@@ -34,6 +38,22 @@ div {
 }
 
 /* _____mobile */
+
+@media (min-width: 576px) {
+	p {
+		max-width: 300px;
+	}
+}
+
 h1 {
 	font-size: 2rem;
+}
+
+.md-p {
+	font-size: 1rem;
+	font-weight: normal;
+}
+
+.lg-p {
+    font-size: 1.25rem;
 }
